--- a/app/css/submission.css
+++ b/app/css/submission.css
@@ -78,23 +78,6 @@ body {
   position: relative;
 }
 
-.pagination {
-  display: flex;
-  justify-content: center;
-}
-.pagination a {
-  width: 10px;
-  height: 10px;
-  margin: 5px;
-  display: block;
-  background-color: white;
-  border-radius: 50%;
-  opacity: 0.4;
-}
-.pagination a.active {
-  opacity: 1;
-}
-
 .btn {
   padding: 10px 40px;
   background-color: #032041;
@@ -124,6 +107,7 @@ body {
 .text:last-child {
   margin-bottom: 20px;
 }
+
 .btn:last-child {
   margin-bottom: 58px;
 }
@@ -132,6 +116,7 @@ body {
 .selfie-frame {
   position: relative;
 }
+
 .selfie-frame .face {
   position: absolute;
   left: 0;
@@ -147,14 +132,17 @@ body {
   flex-direction: column;
   justify-content: flex-end;
 }
+
 .full .landian {
   margin-bottom: 40px;
 }
+
 .full .landian {
   width: 100%;
   height: 72vh;
   position: relative;
 }
+
 .full .landian img {
   height: 100%;
   position: absolute;
@@ -180,9 +168,37 @@ body {
   top: 0;
   width: 100%;
 }
+
 .full .share-photo .landian {
   height: 60vh;
   position: absolute;
   right: -30%;
   bottom: 0;
+}
+
+/* QR code and URL overlay */
+.overlay {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(2, 30, 63, 0.9);
+  z-index: 20;
+  text-align: center;
+  color: white;
+}
+
+.overlay h1 {
+  margin-bottom: 5vh;
+  font-weight: 700;
+  font-size: 7vw;
+}
+
+.overlay #QR-code {
+  margin: 0 auto;
+  width: 18vw;
 }
