--- a/app/css/submission.css
+++ b/app/css/submission.css
@@ -32,19 +32,15 @@
 }
 
 body {
-  min-width: 100vw;
   min-height: 100vh;
   position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: #0a222e;
+  background-color: #1679b7;
+  background-repeat: no-repeat;
   background-image: linear-gradient(
     to bottom,
-    #001432 0%,
-    #0b4472 60%,
-    #1679b7 100%
+    #001432 0,
+    #0b4472 300px,
+    #1679b7 800px
   );
   font-family: 'BentonSans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
@@ -63,19 +59,34 @@ body {
 
 .landian-list {
   max-width: 100vw;
-  margin-bottom: 10px;
-  padding-bottom: 10px;
-  position: relative;
-  overflow: scroll;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.landian-list .landian {
+  margin-bottom: 20px;
 }
 
 .landian-list .landian img {
-  height: 250px;
+  display: block;
+  width: 30vw;
 }
 
 .landian {
   position: relative;
+}
+
+.intro {
+  margin-top: 20px;
+}
+
+.cta {
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .btn {
@@ -90,7 +101,8 @@ body {
 }
 
 .text {
-  padding: 5px;
+  margin: 0 10px;
+  padding: 10px 10px 15px;
   display: inline-block;
   font-size: 12px;
   color: white;
@@ -99,22 +111,37 @@ body {
   border: none;
 }
 
-.btn + .text {
-  margin-top: 10px;
-}
-
-/* Not sure I like this, might change */
-.text:last-child {
-  margin-bottom: 20px;
-}
-
-.btn:last-child {
-  margin-bottom: 58px;
-}
-
 /* selfie */
 .selfie-frame {
+  height: 100vh;
   position: relative;
+  background-color: #111;
+}
+
+.selfie-frame video {
+  margin: 0 auto;
+}
+
+.selfie-frame + .intro {
+  width: 100vw;
+  margin: 0;
+  padding: 5px 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,.5);
+  text-align: left;
+  z-index: 2;
+}
+
+.selfie-frame ~ .text.restart {
+  position: fixed;
+  margin: 0;
+  padding: 6px 10px;
+  top: 0;
+  right: 0;
+  z-index: 3;
+  background-color: rgba(0,0,0,.5);
 }
 
 .selfie-frame .face {
@@ -125,21 +152,36 @@ body {
   opacity: 0.5;
 }
 
+.btn-capture {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,.23);
+  outline: none;
+  border: none;
+}
+
 /* views */
+
+#root {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 .full,
 .full #root {
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
 }
 
 .full .landian {
-  margin-bottom: 40px;
-}
-
-.full .landian {
   width: 100%;
-  height: 72vh;
+  margin-bottom: 30px;
+  height: calc(95vh - 140px);
   position: relative;
 }
 
