--- a/app/css/submission.css
+++ b/app/css/submission.css
@@ -118,8 +118,10 @@ body {
   background-color: #111;
 }
 
-.selfie-frame video {
-  margin: 0 auto;
+.selfie-frame video,
+.selfie-frame img {
+  margin-left: 50%;
+  position: absolute;
 }
 
 .selfie-frame + .intro {
@@ -129,7 +131,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(0,0,0,.5);
+  background-color: rgba(0, 0, 0, 0.5);
   text-align: left;
   z-index: 2;
 }
@@ -141,7 +143,7 @@ body {
   top: 0;
   right: 0;
   z-index: 3;
-  background-color: rgba(0,0,0,.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .selfie-frame .face {
@@ -158,7 +160,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(0,0,0,.23);
+  background-color: rgba(0, 0, 0, 0.23);
   outline: none;
   border: none;
 }
@@ -193,29 +195,16 @@ body {
   transform: translateX(-50%);
 }
 
-.full .share-photo {
-  width: 70vh;
-  height: 70vh;
-  max-width: 100vw;
-  max-height: 100vw;
-  margin-bottom: 40px;
-  position: relative;
-  overflow: hidden;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+.full .share-image {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
 }
 
-.full .share-photo > .bg {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-}
-
-.full .share-photo .landian {
-  height: 60vh;
-  position: absolute;
-  right: -30%;
-  bottom: 0;
+.full .share-image img {
+  max-width: 100%;
+  display: block;
 }
 
 /* QR code and URL overlay */
