--- a/app/css/submission.css
+++ b/app/css/submission.css
@@ -1,34 +1,28 @@
 @font-face {
-  font-family: BentonSans;
+  font-family: salesforce-sans;
   font-style: normal;
-  font-weight: 300;
-  src: url('../fonts/bentonsans/bentonsans-book.eot?#iefix')
-      format('embedded-opentype'),
-    url('../fonts/bentonsans/bentonsans-book.woff') format('woff'),
-    url('../fonts/bentonsans/bentonsans-book.ttf') format('truetype'),
-    url('../fonts/bentonsans/bentonsans-book.svg#BentonSans') format('svg');
+  font-weight: 200;
+  src: url(https://www.herokucdn.com/fonts/SalesforceSans-Book.eot?#iefix) format("embedded-opentype"),
+    url(https://www.herokucdn.com/fonts/SalesforceSans-Book.woff) format("woff"),
+    url(https://www.herokucdn.com/fonts/SalesforceSans-Book.ttf) format("truetype")
 }
 
 @font-face {
-  font-family: BentonSans;
+  font-family: salesforce-sans;
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/bentonsans/bentonsans-regular.eot?#iefix')
-      format('embedded-opentype'),
-    url('../fonts/bentonsans/bentonsans-regular.woff') format('woff'),
-    url('../fonts/bentonsans/bentonsans-regular.ttf') format('truetype'),
-    url('../fonts/bentonsans/bentonsans-regular.svg#BentonSans') format('svg');
+  src: url(https://www.herokucdn.com/fonts/SalesforceSans-Regular.eot?#iefix) format("embedded-opentype"),
+    url(https://www.herokucdn.com/fonts/SalesforceSans-Regular.woff) format("woff"),
+    url(https://www.herokucdn.com/fonts/SalesforceSans-Regular.ttf) format("truetype")
 }
 
 @font-face {
-  font-family: BentonSans;
+  font-family: salesforce-sans;
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/bentonsans/bentonsans-medium.eot?#iefix')
-      format('embedded-opentype'),
-    url('../fonts/bentonsans/bentonsans-medium.woff') format('woff'),
-    url('../fonts/bentonsans/bentonsans-medium.ttf') format('truetype'),
-    url('../fonts/bentonsans/bentonsans-medium.svg#BentonSans') format('svg');
+  src: url(https://www.herokucdn.com/fonts/SalesforceSans-Bold.eot?#iefix) format("embedded-opentype"),
+    url(https://www.herokucdn.com/fonts/SalesforceSans-Bold.woff) format("woff"),
+    url(https://www.herokucdn.com/fonts/SalesforceSans-Bold.ttf) format("truetype")
 }
 
 body {
@@ -42,7 +36,7 @@ body {
     #0b4472 300px,
     #1679b7 800px
   );
-  font-family: 'BentonSans', 'Helvetica Neue', sans-serif;
+  font-family: 'salesforce-sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.5;
@@ -118,10 +112,8 @@ body {
   background-color: #111;
 }
 
-.selfie-frame video,
-.selfie-frame img {
-  margin-left: 50%;
-  position: absolute;
+.selfie-frame video {
+  margin: 0 auto;
 }
 
 .selfie-frame + .intro {
@@ -131,7 +123,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0,0,0,.5);
   text-align: left;
   z-index: 2;
 }
@@ -143,7 +135,7 @@ body {
   top: 0;
   right: 0;
   z-index: 3;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0,0,0,.5);
 }
 
 .selfie-frame .face {
@@ -160,7 +152,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.23);
+  background-color: rgba(0,0,0,.23);
   outline: none;
   border: none;
 }
@@ -195,16 +187,29 @@ body {
   transform: translateX(-50%);
 }
 
-.full .share-image {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  margin: 0 auto;
+.full .share-photo {
+  width: 70vh;
+  height: 70vh;
+  max-width: 100vw;
+  max-height: 100vw;
+  margin-bottom: 40px;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
-.full .share-image img {
-  max-width: 100%;
-  display: block;
+.full .share-photo > .bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+
+.full .share-photo .landian {
+  height: 60vh;
+  position: absolute;
+  right: -30%;
+  bottom: 0;
 }
 
 /* QR code and URL overlay */
